[+] заполнение счетов пользователя и списка валют в main.html
